--- a/Dockerfile-debian
+++ b/Dockerfile-debian
@@ -1,10 +1,17 @@
-FROM debian:9.11
+FROM debian:9.11 AS TEMP
 
 RUN apt-get update \
-    && apt-get install -y locales fonts-arphic-uming fontconfig xfonts-utils microdnf \
+    && apt-get install -y locales fonts-arphic-uming fontconfig xfonts-utils vim openjdk-8-jdk \
     && sed -ie 's/# zh_TW.UTF-8 UTF-8/zh_TW.UTF-8 UTF-8/g' /etc/locale.gen \
     && sed -ie 's/# zh_TW BIG5/zh_TW BIG5/g' /etc/locale.gen \
     && locale-gen
 
+FROM gcr.io/distroless/java:8-debug
+
+COPY --from=TEMP /usr/lib/locale /usr/lib/locale
+
 ENV LC_ALL=zh_TW.big5 \
     LANG=zh_TW.big5
+
+ADD test.tar .
+ADD CreateFile.class .
