--- a/redisson.conf
+++ b/redisson.conf
@@ -20,11 +20,15 @@ clusterServersConfig:
   slaveConnectionPoolSize: 64
   masterConnectionMinimumIdleSize: 32
   masterConnectionPoolSize: 64
-  readMode: "MASTER_SLAVE"
+  readMode: "MASTER"
+  subscriptionMode: "MASTER"
   nodeAddresses:
   - "redis://redis-0.redis.csr.svc.cluster.local:6379"
   - "redis://redis-1.redis.csr.svc.cluster.local:6379"
   - "redis://redis-2.redis.csr.svc.cluster.local:6379"
+  - "redis://redis-3.redis.csr.svc.cluster.local:6379"
+  - "redis://redis-4.redis.csr.svc.cluster.local:6379"
+  - "redis://redis-5.redis.csr.svc.cluster.local:6379"
   scanInterval: 1000
 threads: 0
 nettyThreads: 0
