--- a/redisson.conf
+++ b/redisson.conf
@@ -20,8 +20,8 @@ clusterServersConfig:
   slaveConnectionPoolSize: 64
   masterConnectionMinimumIdleSize: 32
   masterConnectionPoolSize: 64
-  readMode: "MASTER"
-  subscriptionMode: "MASTER"
+  readMode: "SLAVE"
+  subscriptionMode: "SLAVE"
   nodeAddresses:
   - "redis://redis-0.redis.csr.svc.cluster.local:6379"
   - "redis://redis-1.redis.csr.svc.cluster.local:6379"
